LPS-111838 Avoid jumping of button when vote is updated

--- a/modules/apps/ratings/ratings-taglib/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/ratings/ratings-taglib/src/main/resources/META-INF/resources/css/main.scss
@@ -90,6 +90,8 @@
 
 	.ratings-stars-button-text {
 		font-size: 0.875rem;
+		justify-content: center;
+		min-width: 1ch;
 	}
 
 	.ratings-stars-average {
